--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -3,7 +3,7 @@ PROV310;Christiansand;;;;;;;;;;;;;
 PROV3469;Flatow;;;;;;;;;;;;;
 PROV3470;Ipsala;;;;;;;;;;;;;
 PROV3471;Saint-Palais;;;;;;;;;;;;;
-PROV3472;Bayonne;;;;;;;;;;;;;
+PROV3472;Baiona;;;;;;;;;;;;;
 PROV3473;Aveiro;;;;;;;;;;;;;
 PROV3426;Északihatár;;;;;;;;;;;;;
 PROV3427;Gori;;;;;;;;;;;;;
@@ -11,10 +11,10 @@ PROV3428;Tuttul;;;;;;;;;;;;;
 PROV3429;Telavi;;;;;;;;;;;;;
 PROV3430;Chegga;;;;;;;;;;;;;
 PROV3431;Malian Desert;;;;;;;;;;;;;
-PROV3432;Cavaillon;;;;;;;;;;;;;
+PROV3432;Cavalhon;;;;;;;;;;;;;
 PROV3433;Vielha;;;;;;;;;;;;;
 PROV3434;Bardonecchia;;;;;;;;;;;;;
-PROV3435;Balme;;;;;;;;;;;;;
+PROV3435;Bârmes;;;;;;;;;;;;;
 PROV964;Akcirkey;;;;;;;;;;;;;
 PROV966;Keriç;;;;;;;;;;;;;
 PROV3436;Kezlev;;;;;;;;;;;;;
@@ -50,7 +50,7 @@ PROV1756;al-Arish;;;;;;;;;;;;;
 PROV3405;Tadmor;;;;;;;;;;;;;
 PROV3406;Artik;;;;;;;;;;;;;
 PROV3407;Amara;;;;;;;;;;;;;
-PROV3408;Cherbourg;;;;;;;;;;;;;
+PROV3408;Tchidbouo;;;;;;;;;;;;;
 PROV3409;Thionville;;;;;;;;;;;;;
 PROV3410;Morales;;;;;;;;;;;;;
 PROV3411;Teotitlan;;;;;;;;;;;;;
@@ -126,7 +126,7 @@ PROV3321;Tomurlik;;;;;;;;;;;;;
 PROV3320;Jeremie;;;;;;;;;;;;;
 PROV3319;Coatlicamac;;;;;;;;;;;;;
 PROV3318;Orava;;;;;;;;;;;;;
-PROV3317;Lausanne;;;;;;;;;;;;;
+PROV3317;Losena;;;;;;;;;;;;;
 PROV3316;Zakatata;;;;;;;;;;;;;
 PROV3315;Sochi;;;;;;;;;;;;;
 PROV3314;Boulogne;;;;;;;;;;;;;
@@ -248,7 +248,7 @@ PROV860;Kostantiniye;;;;;;;;;;;;;
 PROV869;Smyrna;;;;;;;;;;;;;
 RUS_1008;Moskva;;;;;;;;;;;;;
 PROV958;Kyiv;;;;;;;;;;;;;
-PROV603;Zürich;;;;;;;;;;;;;
+PROV603;Turitg;;;;;;;;;;;;;
 PROV1017;Oryol;;;;;;;;;;;;;
 PROV1008;Moskva;;;;;;;;;;;;;
 PROV372;København;;;;;;;;;;;;;
@@ -293,8 +293,8 @@ CANAL_6;English Channel;;;;;;;;;;;;;
 GRE_837;Stereá Elláda;;;;;;;;;;;;;
 GRE_826;Peloponnisos;;;;;;;;;;;;;
 #EGY_846;Nisiá Aigaíou;;;;;;;;;;;;;
-PROV2669;Sondrio;;;;;;;;;;;;;
-PROV3262;Belluno;;;;;;;;;;;;;
+PROV2669;Sunder;;;;;;;;;;;;;
+PROV3262;Belun;;;;;;;;;;;;;
 PROV3261;Pescara;;;;;;;;;;;;;
 PROV2351;Magdalena;;;;;;;;;;;;;
 PROV3260;Sado;;;;;;;;;;;;;
@@ -970,6 +970,63 @@ ENG_2068;Mashonaland;;;;;;;;;;;;;
 ENG_2071;Rozwi;;;;;;;;;;;;;
 ENG_2074;Bechuanaland;;;;;;;;;;;;;
 ENG_2094;Griqualand West;;;;;;;;;;;;;
+PROV420;Brest;;;;;;;;;;;;
+PROV421;Sant-Brieg;;;;;;;;;;;;
+PROV422;Gwened;;;;;;;;;;;;
+PROV423;Naunnt;;;;;;;;;;;;
+PROV424;Roazhon;;;;;;;;;;;;
+PROV403;St-Quentin;;;;;;;;;;;;;
+PROV408;Reims;;;;;;;;;;;;;
+PROV415;Lé Hâvre;;;;;;;;;;;;;
+PROV416;Évreux;;;;;;;;;;;;
+PROV417;Alençoun;;;;;;;;;;;;
+PROV418;Kaem;;;;;;;;;;;;
+PROV431;Chalon;;;;;;;;;;;;;
+PROV435;Laval;;;;;;;;;;;;;
+PROV430;Vichèi;;;;;;;;;;;;;
+PROV434;Niàu;;;;;;;;;;;;
+PROV437;La Rochàe;;;;;;;;;;;;
+PROV442;La Rochéle;;;;;;;;;;;;
+PROV443;Poetié;;;;;;;;;;;;
+PROV444;Engoulaeme;;;;;;;;;;;;
+PROV441;Tours;Tours;Tours;;Tours;;;;;;;;
+PROV445;Limòtges;;;;;;;;;;;;
+PROV446;Garait;;;;;;;;;;;;;
+PROV448;Clharmou;;;;;;;;;;;;
+PROV447;Peireguers;;;;;;;;;;;;;
+PROV449;Orlhac;;;;;;;;;;;;
+PROV450;Caors;;;;;;;;;;;;
+PROV451;Liyon;;;;;;;;;;;;;
+PROV453;Valença;;;;;;;;;;;;
+PROV454;Grainóvol;;;;;;;;;;;;
+PROV455;Tolosa;;;;;;;;;;;;
+PROV456;Montalban;;;;;;;;;;;;
+PROV452;Sant-Etiève;;;;;;;;;;;;;
+PROV457;Tarba;;;;;;;;;;;;;
+PROV458;Bordèu;;;;;;;;;;;;
+PROV459;Lo Mont de Marçan;;;;;;;;;;;;;
+PROV460;Pau;;;;;;;;;;;;
+PROV461;Montpelhièr;;;;;;;;;;;;
+PROV462;Rodés;;;;;;;;;;;;
+PROV463;Narbona;;;;;;;;;;;;;
+PROV464;Perpinyà;;;;;;;;;;;;
+PROV465;Èneci;;;;;;;;;;;;
+PROV466;Chambèri;;;;;;;;;;;;
+PROV467;Marselha;;;;;;;;;;;;
+PROV468;Montelaimar;;;;;;;;;;;;;
+PROV469;Dinha;;;;;;;;;;;;
+PROV470;Tolon;;;;;;;;;;;;
+PROV471;Frejús;;;;;;;;;;;;;
+PROV472;Niça;;;;;;;;;;;;
+PROV607;Zhnèva;;;;;;;;;;;;
+PROV608;Nôchâtél;;;;;;;;;;;;
+PROV611;Cuoira;;;;;;;;;;;;
+PROV614;Breagaz;;;;;;;;;;;;
+PROV721;Aoûta;;;;;;;;;;;;
+PROV733;Udin;;;;;;;;;;;;
+PROV734;Trent;;;;;;;;;;;;;
+PROV735;Bulsan;;;;;;;;;;;;
+PROV2568;Ligiaun;;;;;;;;;;;;
 PROV2124;Maore;;;;;;;;;;;;;
 PROV220;Annapolis;;;;;;;;;;;;;
 PROV3;Fort Nikolaevskaia;;;;;;;;;;;;;
@@ -1054,11 +1111,11 @@ PROV2187;Qumarqaj;;;;;;;;;;;;;
 PROV2628;Iximche;;;;;;;;;;;;;
 BAV_601;Niederbayern;;;;;;;;;;;;;
 PROV3249;Old Tianjin;;;;;;;;;;;;;
-PROV606;Luzern;;;;;;;;;;;;;
+PROV606;Lucerna;;;;;;;;;;;;;
 PROV2627;Coudersport;;;;;;;;;;;;;
 PROV160;Superior;;;;;;;;;;;;;
-PROV3250;Fribourg;;;;;;;;;;;;;
-PROV3251;Monaco;;;;;;;;;;;;;
+PROV3250;Fribôrg;;;;;;;;;;;;;
+PROV3251;Mónegue;;;;;;;;;;;;;
 PROV185;Pikeville;;;;;;;;;;;;;
 PROV186;Lexington;;;;;;;;;;;;;
 PROV196;Gadsden;;;;;;;;;;;;;
@@ -1089,7 +1146,6 @@ PROV575;Köln;;;;;;;;;;;;;
 PROV577;Kleve;;;;;;;;;;;;;
 PROV536;Braunschweig;;;;;;;;;;;;;
 PROV400;Dunkèke;;;;;;;;;;;;;
-PROV451;Lyon;;;;;;;;;;;;;
 PROV534;Hannover;;;;;;;;;;;;;
 FRA_438;Centre-Val de Loire;;;;;;;;;;;;;
 SIC_763;Sicilia;;;;;;;;;;;;;
@@ -1136,7 +1192,7 @@ PROV3557;Steyr;;;;;;;;;;;;;
 PROV3558;Weinschloss;;;;;;;;;;;;;
 PROV3559;Einheimische;;;;;;;;;;;;;
 PROV3560;Kaputtschwert;;;;;;;;;;;;;
-PROV3561;Avignon;;;;;;;;;;;;;
+PROV3561;Avinhon;;;;;;;;;;;;;
 PROV3562;Otena;;;;;;;;;;;;;
 PROV3563;Balteva;;;;;;;;;;;;;
 PROV3564;Jaszbereny;;;;;;;;;;;;;
