finished pops for Germany, fixed pops and some loc

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -2,7 +2,7 @@ Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;P
 PROV310;Christiansand;;;;;;;;;;;;;
 PROV3469;Flatow;;;;;;;;;;;;;
 PROV3470;Ipsala;;;;;;;;;;;;;
-PROV3471;Saint-Palais;;;;;;;;;;;;;
+PROV3471;Donapaleu;;;;;;;;;;;;;
 PROV3472;Baiona;;;;;;;;;;;;;
 PROV3473;Aveiro;;;;;;;;;;;;;
 PROV3426;Északihatár;;;;;;;;;;;;;
@@ -12,7 +12,7 @@ PROV3429;Telavi;;;;;;;;;;;;;
 PROV3430;Chegga;;;;;;;;;;;;;
 PROV3431;Malian Desert;;;;;;;;;;;;;
 PROV3432;Cavalhon;;;;;;;;;;;;;
-PROV3433;Vielha;;;;;;;;;;;;;
+PROV3433;Viella;;;;;;;;;;;;;
 PROV3434;Bardonecchia;;;;;;;;;;;;;
 PROV3435;Bârmes;;;;;;;;;;;;;
 PROV964;Akcirkey;;;;;;;;;;;;;
@@ -37,7 +37,7 @@ PROV398;Bastogne;;;;;;;;;;;;;
 PROV3403;Barahona;;;;;;;;;;;;;
 PROV3402;Chiappan;;;;;;;;;;;;;
 PROV3401;Fraga;;;;;;;;;;;;;
-PROV3400;Braganca;;;;;;;;;;;;;
+PROV3400;Braganza;;;;;;;;;;;;;
 PROV3399;Versailles;;;;;;;;;;;;;
 PROV3398;Benevento;;;;;;;;;;;;;
 PROV3397;Pontecorvo;;;;;;;;;;;;;
@@ -1018,6 +1018,32 @@ PROV469;Dinha;;;;;;;;;;;;
 PROV470;Tolon;;;;;;;;;;;;
 PROV471;Frejús;;;;;;;;;;;;;
 PROV472;Niça;;;;;;;;;;;;
+PROV475;Uviéu;;;;;;;;;;;;
+PROV477;Llión;;;;;;;;;;;;
+PROV478;Sanander;;;;;;;;;;;;
+PROV480;Valladolid;;;;;;;;;;;;
+PROV482;Sallamanca;;;;;;;;;;;;
+PROV483;Ávila;;;;;;;;;;;;
+PROV492;Bilbo;;;;;;;;;;;;
+PROV493;Iruña;;;;;;;;;;;;
+PROV487;Madrid;;;;;;;;;;;;
+PROV488;Segontia;;;;;;;;;;;;
+PROV489;Toledo;;;;;;;;;;;;
+PROV490;Conca;;;;;;;;;;;;
+PROV491;Ciudad Real;;;;;;;;;;;;
+PROV494;Logronyo;;;;;;;;;;;;
+PROV495;Çaragoça;;;;;;;;;;;;
+PROV496;Uesca;;;;;;;;;;;;
+PROV497;Teruel;;;;;;;;;;;;
+PROV498;Barcelona;;;;;;;;;;;;
+PROV499;Girona;;;;;;;;;;;;
+PROV500;Lleida;;;;;;;;;;;;
+PROV501;Tarragona;;;;;;;;;;;;
+PROV502;Illes Balears;;;;;;;;;;;;
+PROV503;València;;;;;;;;;;;;
+PROV504;Castelló;;;;;;;;;;;;
+PROV505;Alacant;;;;;;;;;;;;
+PROV507;Murcia;;;;;;;;;;;;
 PROV607;Zhnèva;;;;;;;;;;;;
 PROV608;Nôchâtél;;;;;;;;;;;;
 PROV611;Cuoira;;;;;;;;;;;;
