--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -422,6 +422,12 @@ south_semitic;South Semitic;x;;;;
 na_dene;Na-Dene;x;;;;
 eastern_sudanic;Eastern Sudanic;x;;;;
 egyptian;Egyptian;x;;;;
+caribbean_isolates;Caribbean Isolates;x;;;;
+arawak_group;Arawak Group;x;;;;
+amerindo_roman;Amerindo-Roman;x;;;;
+siouan;Siouan;x;;;;
+algic;Algic;x;;;;
+iroquoian;Iroquoian;x;;;;
 tawjilit;Tawjilit;x;;;;
 tasuknit;Tasuknit;x;;;;
 nafusi;Nafusi;x;;;;
@@ -694,6 +700,34 @@ carpi;Carpi;x;;;;
 costoboci;Costoboci;x;;;;
 bastarnae;Bastarnae;x;;;;
 beceneg;Beceneg;x;;;;
+catawban;Catawban;x;;;;
+biloxi_ofo;Biloxi-Ofo;x;;;;
+tutelo;Tutelo;x;;;;
+dhegihan;Dhegihan;x;;;;
+dakota;Dakota;x;;;;
+chiwere_winnebago;Chiwere;x;;;;
+mitchigamea;Mitchigamea;x;;;;
+crow_hidatsa;Crow-Hidatsa;x;;;;
+mandan;Mandan;x;;;;
+nanticocke;Nanticocke;x;;;;
+lenape;Lenape;x;;;;
+mohican;Mohican;x;;;;
+nipmuc;Nipmuc;x;;;;
+quiripi;Quiripi;x;;;;
+narragansett_secatogue;Nerragansett-Secatogue;x;;;;
+massachusett;Massachusett;x;;;;
+maliseet;Maliseet;x;;;;
+absenaki;Absenaki;x;;;;
+mikmaq;Mikmaq;x;;;;
+illinois;Illinois;x;;;;
+meskwaki;Meskwaki;x;;;;
+potawatomi;Potawatomi;x;;;;
+menominee;Menominee;x;;;;
+ojibwe;Ojibwe;x;;;;
+arapahoan;Arapahoan;x;;;;
+siksika;Siksika;x;;;;
+yoruk;Yoruk;x;;;;
+iroquois;Iroquois;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
