Poland changes and a lot of pop fixes and tweaks

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -320,6 +320,8 @@ DCM;Dacia Minor;x;;;;
 DCM_ADJ;Dacian;x;;;;
 BEC;Becenegi;x;;;;
 BEC_ADJ;Becenegi;x;;;;
+LDZ;Ledzanie;x;;;;
+LDZ_ADJ;Lendian;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
