Maghreb Rework part 1

--- a/KOS/localisation/000_persia_map.csv
+++ b/KOS/localisation/000_persia_map.csv
@@ -110,13 +110,13 @@ PROV1444;Maarjalinn;;;;;;;;;;;;;
 PROV1445;Sorbian;;;;;;;;;;;;;
 PROV1446;Dili;;;;;;;;;;;;;
 PROV1594;Kashgar;;;;;;;;;;;;;
-PROV1716;Tabelbala;;;;;;;;;;;;;
+PROV1716;Tinduf;;;;;;;;;;;;;
 PROV1717;Kherrata;;;;;;;;;;;;;
 PROV1718;Tanezrouft;;;;;;;;;;;;;
 PROV1719;Tawendert;;;;;;;;;;;;;
 PROV1720;Taghit;;;;;;;;;;;;;
 PROV1721;Igilgili;;;;;;;;;;;;;
-PROV1722;Adrar;;;;;;;;;;;;;
+PROV1722;Tawdenni;;;;;;;;;;;;;
 PROV1739;Western Libyan Desert;;;;;;;;;;;;;
 PROV1740;Isuknen;;;;;;;;;;;;;
 PROV1758;Eastern Libyan Desert;;;;;;;;;;;;;
@@ -140,7 +140,7 @@ PROV2586;Rub'al-Khali;;;;;;;;;;;;;
 NEJ_1157;Rub'al-Khali;;;;;;;;;;;;;
 PROV2599;Fairbanks;;;;;;;;;;;;;
 PROV2607;Taklimakan;;;;;;;;;;;;;
-PROV2609;Tawdenni;;;;;;;;;;;;;
+PROV2609;Arawane;;;;;;;;;;;;;
 PROV2619;Kunduz;;;;;;;;;;;;;
 PROV2629;Sambalioeng;;;;;;;;;;;;;
 PROV2622;Soppeng;;;;;;;;;;;;;
