--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -36,7 +36,7 @@ PROV3416;Bautzen;;;;;;;;;;;;;
 PROV398;Bastogne;;;;;;;;;;;;;
 PROV3403;Barahona;;;;;;;;;;;;;
 PROV3402;Chiappan;;;;;;;;;;;;;
-PROV3401;Fraga;;;;;;;;;;;;;
+PROV3401;Tidjikja;;;;;;;;;;;;;
 PROV3400;Dacs;;;;;;;;;;;;;
 PROV3399;Versailles;;;;;;;;;;;;;
 PROV3398;Benevento;;;;;;;;;;;;;
@@ -198,8 +198,8 @@ PROV516;Orancu;;;;;;;;;;;;
 PROV517;Mont Eracle;;;;;;;;;;;;
 PROV518;Portugal;;;;;;;;;;;;
 PROV519;Dourocida;;;;;;;;;;;;
-PROV520;Covilha;;;;;;;;;;;;
-PROV522;Cavazulia;;;;;;;;;;;;
+PROV520;Cavazulia;;;;;;;;;;;;
+PROV522;Colimbria;;;;;;;;;;;;
 PROV523;Orante;;;;;;;;;;;;
 PROV524;Setobriga;;;;;;;;;;;;
 PROV525;Eboracu;;;;;;;;;;;;
@@ -677,7 +677,7 @@ PROV2691;Minusk;;;;;;;;;;;;;
 PROV2657;Dudinka;;;;;;;;;;;;;
 PROV1065;Nyagan;;;;;;;;;;;;;
 PROV2686;Kainsk;;;;;;;;;;;;;
-PROV1696;Cape Juby;;;;;;;;;;;;;
+PROV1696;Tiznit;;;;;;;;;;;;;
 ENG_1251;West Bengal;;;;;;;;;;;;;
 ENG_1252;East Bengal;;;;;;;;;;;;;
 PROV1290;Umerkot;;;;;;;;;;;;;
@@ -700,7 +700,7 @@ PROV1382;Hà Tiên;;;;;;;;;;;;;
 RUS_1048;Circassia;;;;;;;;;;;;;
 PROV1049;Ubykhia;;;;;;;;;;;;;
 PROV689;Tesin;;;;;;;;;;;;;
-PROV1773;Saguia el-Hamra;;;;;;;;;;;;;
+PROV1773;Zawerat;;;;;;;;;;;;;
 PROV1178;Sana'a;;;;;;;;;;;;;
 PROV972;Yekaterinoslav;;;;;;;;;;;;;
 PROV1041;Elista;;;;;;;;;;;;;
@@ -1241,9 +1241,9 @@ PROV3554;Kungkeng;;;;;;;;;;;;;
 PROV3555;Spittal;;;;;;;;;;;;;
 PROV3556;Liezen;;;;;;;;;;;;;
 PROV3557;Steyr;;;;;;;;;;;;;
-PROV3558;Caminha;;;;;;;;;;;;;
+PROV3558;Diongaga;;;;;;;;;;;;;
 PROV3559;Vitsablinu;;;;;;;;;;;;;
-PROV3560;Ponferrata;;;;;;;;;;;;;
+PROV3560;Nara;;;;;;;;;;;;;
 PROV3561;Avinhon;;;;;;;;;;;;;
 PROV3562;Otena;;;;;;;;;;;;;
 PROV3563;Balteva;;;;;;;;;;;;;
