--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -9835,7 +9835,7 @@ PROV1769;Qina;Qina;Qina;;Qina;;;;;;;;
 PROV1770;Qusayr;Qusayr;Qusayr;;Qusayr;;;;;;;;
 PROV1771;Marsa Alam;Marsa Alam;Marsa Alam;;Marsa Alam;;;;;;;;
 PROV1772;Ras Gharib;Ras Gharib;Ras Gharib;;Ras Gharib;;;;;;;;
-PROV1775;Nouakchott;Nouakchott;Nouakchott;;Nuakchot;;;;;;;;
+PROV1775;Nawaksut;Nawaksut;Nawaksut;;Nawaksut;;;;;;;;
 PROV1776;Rosso;Rosso;Rosso;;Rosso;;;;;;;;
 PROV1777;Aleg;Aleg;Aleg;;Aleg;;;;;;;;
 PROV1778;Maghama;Maghama;Maghama;;Maghama;;;;;;;;
