Maghreb Rework Part 2 (not finished)

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -30,14 +30,14 @@ CTG;Cartagine;x;;;;
 CTG_ADJ;Cartaginian;x;;;;
 GTL;Gothalaunia;x;;;;
 GTL_ADJ;Gothalaunians;x;;;;
-MTN;Mauretania;x;;;;
-MTN_ADJ;Maure;x;;;;
-ISG;Isgelmasen;x;;;;
-ISG_ADJ;Isgelmasit;x;;;;
-MSA;Masaesyli;x;;;;
-MSA_ADJ;Masaesylit;x;;;;
-MSL;Massylii;x;;;;
-MSL_ADJ;Massyliit;x;;;;
+MTN;Muretannia;x;;;;
+MTN_ADJ;Muretannian;x;;;;
+ISG;Azanage;x;;;;
+ISG_ADJ;Azanag;x;;;;
+MSA;Numidia;x;;;;
+MSA_ADJ;Numidian;x;;;;
+MSL;Rusigan;x;;;;
+MSL_ADJ;Rusiganu;x;;;;
 SZA;Kunság;x;;;;
 SZA_ADJ;Kunság;x;;;;
 HLC;Halics;x;;;;
@@ -250,6 +250,10 @@ KIR;Kel Aïr;x;;;;
 KIR_ADJ;Kel Aïr;x;;;;
 KJJ;Kel Ajjer;x;;;;
 KIR_ADJ;Kel Ajjer;x;;;;
+KKH;Kel Akhnet;x;;;;
+KKH_ADJ;Kel Akhnet;x;;;;
+TWT;Touat;x;;;;
+TWT_ADJ;Touats;x;;;;
 DTW;Dotawo;x;;;;
 DTW_ADJ;Dotawo;x;;;;
 DTW_theocracy;Dotawo Order;;;;;;;;;;;;;
