Global rework pops part 1

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -105,7 +105,7 @@ PROV3348;Artaz;;;;;;;;;;;;;
 PROV3347;Jagodina;;;;;;;;;;;;;
 PROV3346;Krusevac;;;;;;;;;;;;;
 PROV3345;Sis;;;;;;;;;;;;;
-PROV3344;Terneuzn;;;;;;;;;;;;;
+PROV3344;Neuzen;;;;;;;;;;;;;
 PROV3342;Kilkis;;;;;;;;;;;;;
 PROV3341;Augustow;;;;;;;;;;;;;
 PROV3340;Krepost Ross;;;;;;;;;;;;;
@@ -166,11 +166,15 @@ PROV836;Lamía;;;;;;;;;;;;;
 PROV839;Náfplion;;;;;;;;;;;;;
 PROV840;Kórinthos;;;;;;;;;;;;;
 AUS_624;Burgenland;;;;;;;;;;;;;
-PROV368;Vamdrup;;;;;;;;;;;;;
+PROV368;Skive;;;;;;;;;;;;;
 PROV2548;Tsolakert;;;;;;;;;;;;;
 PROV1179;al-Hudaydah;;;;;;;;;;;;;
 PROV1841;al-Fashir;;;;;;;;;;;;;
 PROV928;Rewanduz;;;;;;;;;;;;;
+PROV369;Kil;;;;;;;;;;;;
+PROV370;Flansborj;;;;;;;;;;;;
+PROV371;Affenre;;;;;;;;;;;;;
+PROV2557;Esbjörg;;;;;;;;;;;;;
 PROV2196;Brus Laguna;;;;;;;;;;;;;
 PROV1091;Tskhinval;;;;;;;;;;;;;
 PROV2712;Skagerrak;;;;;;;;;;;;;
@@ -305,9 +309,9 @@ BEL_387;Vlaanderen;;;;;;;;;;;;;
 BEL_394;Wallonie;;;;;;;;;;;;;
 PROV609;Sion;;;;;;;;;;;;;
 PROV1623;Songjin;;;;;;;;;;;;;
-PROV388;Bruges;;;;;;;;;;;;;
-PROV389;Gand;;;;;;;;;;;;;
-PROV390;Antwerpn;;;;;;;;;;;;;
+PROV388;Brugske;;;;;;;;;;;;;
+PROV389;Gint;;;;;;;;;;;;;
+PROV390;Antwerpen;;;;;;;;;;;;;
 PROV3269;Portsmouth;;;;;;;;;;;;;
 PROV3268;Exeter;;;;;;;;;;;;;
 PROV3267;Bielefield;;;;;;;;;;;;;
@@ -415,6 +419,7 @@ PROV1531;Új Szegfusziget;;;;;;;;;;;;;
 PROV2537;Görbesziget;;;;;;;;;;;;;
 PROV158;Grand Portage;;;;;;;;;;;;;
 PROV29;Kyzylkum;;;;;;;;;;;;;
+PROV531;Stood;;;;;;;;;;;;
 PROV2595;Nunavut;;;;;;;;;;;;;
 PROV25;Old Bow Fort;;;;;;;;;;;;;
 PROV6;Selkirk;;;;;;;;;;;;;
@@ -597,8 +602,8 @@ PROV383;Grins;;;;;;;;;;;;
 PROV384;Swol;;;;;;;;;;;;
 PROV385;Ljouwert;;;;;;;;;;;;
 PROV386;Drinte;;;;;;;;;;;;
-PROV387;Brussels;;;;;;;;;;;;;
-PROV393;Mont;;;;;;;;;;;;;
+PROV387;Broeksjel;;;;;;;;;;;;;
+PROV393;Bergen;;;;;;;;;;;;;
 PROV391;Hasselt;;;;;;;;;;;;
 PROV392;Nameur;;;;;;;;;;;;
 PROV394;Tchålerwè;;;;;;;;;;;;
@@ -639,15 +644,16 @@ PROV3327;Gelints;;;;;;;;;;;;;
 PROV3328;Eustratii;;;;;;;;;;;;;
 PROV3329;Lütsen;;;;;;;;;;;;;
 PROV3366;Telshõ;;;;;;;;;;;;;
-PROV3383;Turnhout;;;;;;;;;;;;;
+PROV3383;Turnheut;;;;;;;;;;;;;
 PROV3419;Toropec;;;;;;;;;;;;;
 PROV3423;Kuolka;;;;;;;;;;;;;
-PROV3343;Louvain;;;;;;;;;;;;;
+PROV3343;Leiwen;;;;;;;;;;;;;
 NET_375;Hollân;;;;;;;;;;;;
 NET_379;Seelân;;;;;;;;;;;;;
 NET_381;Gelderland;;;;;;;;;;;;
 NET_385;Fryslân;;;;;;;;;;;;
 HAN_540;West-Fryslân;;;;;;;;;;;;;
+PROV540;Ooldenbuurich;;;;;;;;;;;;
 PRU_695;Ostpreu?n;;;;;;;;;;;;
 RUS_1003;Sur' Uz'lidn;;;;;;;;;;;;
 PROV1377;Da Nang;;;;;;;;;;;;;
@@ -947,6 +953,7 @@ NET_1451;Bátorsziget;;;;;;;;;;;;;
 SPA_1463;Lahanepõõlisaared;;;;;;;;;;;;
 GER_2530;Északi Bátorsziget;;;;;;;;;;;;;
 AST_2528;Öbölpart;;;;;;;;;;;;;
+PROV528;Hambuurich;;;;;;;;;;;;
 PROV1393;Löysimesen;;;;;;;;;;;;
 PROV1394;Saarenpunki;;;;;;;;;;;;
 PROV1395;Haukienpäätlinna;;;;;;;;;;;;
@@ -1029,6 +1036,7 @@ CHI_1600;Urumqui;;;;;;;;;;;;;
 CHI_1601;Yunnan;;;;;;;;;;;;;
 CHI_1604;North Zhejiang;;;;;;;;;;;;;
 CHI_1610;South Zhejiang;;;;;;;;;;;;;
+PROV612;Sölden;;;;;;;;;;;;
 PROV1612;Baoding;;;;;;;;;;;;;
 CHI_1612;Hebei;;;;;;;;;;;;;
 PROV1616;Peking;;;;;;;;;;;;;
@@ -1270,7 +1278,7 @@ PROV168;Olney;;;;;;;;;;;;;
 PROV3252;Fois;;;;;;;;;;;;;
 PROV42;Winnipeg;;;;;;;;;;;;;
 PROV36;Pinawa;;;;;;;;;;;;;
-PROV3253;Liechtenstein;;;;;;;;;;;;;
+PROV3253;Innsbruck;;;;;;;;;;;;;
 PROV3254;Bückeburg;;;;;;;;;;;;;
 PROV3255;Reuss;;;;;;;;;;;;;
 PROV3256;Sondershausen;;;;;;;;;;;;;
@@ -1289,9 +1297,10 @@ equatorial_africa;Equatorial Africa;;;;;;;;;;;;;
 PROV599;München;;;;;;;;;;;;;
 PROV595;Nürnberg;;;;;;;;;;;;;
 PROV575;Köln;;;;;;;;;;;;;
-PROV577;Kleve;;;;;;;;;;;;;
+PROV577;Kleev;;;;;;;;;;;;;
 PROV536;Braunschweig;;;;;;;;;;;;;
-PROV400;Dunkèke;;;;;;;;;;;;;
+PROV399;Risjel;;;;;;;;;;;;
+PROV400;Dúntsjerke;;;;;;;;;;;;;
 PROV534;Hannover;;;;;;;;;;;;;
 FRA_438;Centre-Val de Loire;;;;;;;;;;;;;
 SIC_763;Sicilia;;;;;;;;;;;;;
@@ -1395,7 +1404,7 @@ PROV3614;Garbhan;;;;;;;;;;;;;
 PROV3615;Beanntrai;;;;;;;;;;;;;
 PROV3616;Neidin;;;;;;;;;;;;;
 PROV3617;Orglan;;;;;;;;;;;;;
-PROV3618;Altno;;;;;;;;;;;;;
+PROV3618;Elmshorn;;;;;;;;;;;;;
 PROV3619;Corcaigh;;;;;;;;;;;;;
 PROV3620;Freising;;;;;;;;;;;;;
 PROV3621;Ramidava;;;;;;;;;;;;;
@@ -1416,7 +1425,7 @@ PROV3635;Rosenheim;;;;;;;;;;;;;
 PROV3636;Syväkallolinna;;;;;;;;;;;;;
 PROV3637;Mhantain;;;;;;;;;;;;;
 PROV3638;Kolmejõelinn;;;;;;;;;;;;;
-PROV3639;Boullion;;;;;;;;;;;;;
+PROV3639;Bouillon;;;;;;;;;;;;;
 PROV3640;Polondava;;;;;;;;;;;;;
 PROV3641;Athaluain;;;;;;;;;;;;;
 PROV3642;Sucidava;;;;;;;;;;;;;
