--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -391,20 +391,20 @@ KOL;Cölln;;;;;;;;;;;;;
 KOL_ADJ;Cöllner;;;;;;;;;;;;;
 MAG;Meideborg;;;;;;;;;;;;;
 MAG_ADJ;Meideborger;;;;;;;;;;;;;
-LOR;Lodringjë;;;;;;;;;;;;;
-LOR_ADJ;Lodring;;;;;;;;;;;;;
-BRG;Börgondjë;;;;;;;;;;;;;
-BRG_ADJ;Börgond;;;;;;;;;;;;;
-WUR;Almanjë;;;;;;;;;;;;
-WUR_ADJ;Alman;;;;;;;;;;;;
+LOR;Lothringë;;;;;;;;;;;;;
+LOR_ADJ;Lothringer;;;;;;;;;;;;;
+BRG;Burgundië;;;;;;;;;;;;;
+BRG_ADJ;Burgunder;;;;;;;;;;;;;
+WUR;Alamannië;;;;;;;;;;;;
+WUR_ADJ;Alaman;;;;;;;;;;;;
 AAC;Aahë;;;;;;;;;;;;;
 AAC_ADJ;Aah;;;;;;;;;;;;;
 BRN;Stodoranie;;;;;;;;;;;;;
 BRN_ADJ;Stodoranska;;;;;;;;;;;;;
 THU;Dieringn;;;;;;;;;;;;;
 THU_ADJ;Dieringer;;;;;;;;;;;;;
-HES;Haadzjë;;;;;;;;;;;;
-HES_ADJ;Haadz;;;;;;;;;;;;
+HES;Hesse;;;;;;;;;;;;
+HES_ADJ;Hesser;;;;;;;;;;;;
 VEN_democracy;Repùblega Vèneta;;;;;;;;;;;;;
 VEN;Venesia;;;;;;;;;;;;
 VEN_march;Marca di Ravèna;;;;;;;;;;;;
@@ -414,7 +414,7 @@ RMG_march;Ducato di Ancona;;;;;;;;;;;;;
 BSQ;Baskonia;;;;;;;;;;;;;
 BSQ_ADJ;Baskoniako;;;;;;;;;;;;;
 FRA_absolute_monarchy;French Empire;;;;;;;;;;;;;
-BAV;Bayern;;;;;;;;;;;;
+BAV;Boarn;;;;;;;;;;;;
 BAV_ADJ;Bayerisch;;;;;;;;;;;;
 TAR;Morbius Empire;;;;;;;;;;;;;
 TAR_ADJ;Morbius;;;;;;;;;;;;;
@@ -542,6 +542,7 @@ afro_romance;Afro-Romance;x;;;;
 franco_romance;Franco-Romance;x;;;;
 high_germanic;High Germanic;x;;;;
 low_germanic;Low Germanic;x;;;;
+gothic_group;Gothic Group;x;;;;
 galetzian;Galetzian;x;;;;
 ispannu;Ispannu;x;;;;
 tarragones;Tarragonès;x;;;;
@@ -611,7 +612,8 @@ nogay_tatar;Nogai;x;;;;
 tawlula;Tawlula;x;;;;
 cuman;Cuman;x;;;;
 qomani;Qomani;x;;;;
-toledano;Toledano;x;;;;
+toletzianu;Toletzianu;x;;;;
+ulisianu;Ulisianu;x;;;;
 lusitanian;Lusitanian;x;;;;
 neo_phoenician;Neo-Phoenician;x;;;;
 latin;Latin;x;;;;
@@ -840,6 +842,13 @@ ostrisch;Östrisch;x;;;;
 saksysk;Saksysk;x;;;;
 boarisch;Boarisch;x;;;;
 dieringisch;Dieringisch;x;;;;
+rughan;Rughan;x;;;;
+red_croat;Red Croat;x;;;;
+black_croat;Black Croat;x;;;;
+black_serb;Black Serb;x;;;;
+white_serb;White Serb;x;;;;
+stodoranie;Stodoranie;x;;;;
+thuringia_gothic;Thuringia Goths;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
