--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -663,13 +663,13 @@ LUB;Lübeck;Lübeck;Lübeck;;Lübeck;;;;;;;;
 LUX;Luxembourg;Luxembourg;Luxemburg;;Luxemburgo;;;;;;;;
 OLD;Oldenburg;Oldenbourg;Oldenburg;;Oldenburgo;;;;;;;;
 PRU;Prussia;Prusse;Preußen;;Prusia;;;;;;;;
-SAX;Upper Saxony;Saxe;Sachsen;;Sajonia;;;;;;;;
+SAX;Sakksen;;;;;;;;;;;;
 SCH;Schleswig;Slesvig;Schleswig;;Schleswig;;;;;;;;
 COB;Saxe-Coburg-Gotha;Saxe-Cobourg-Gotha;Sachsen-Coburg-Gotha;;Sajonia-Coburgo-Gotha;;;;;;;;
 LIP;Lippe-Detmold;Lippe-Detmold;Lippe-Detmold;;Lippe-Detmold;;;;;;;;
 MEC;Mecklenburg;Mecklenbourg;Mecklenburg;;Mecklenburgo;;;;;;;;
 ITA;Italy;Italie;Italien;;Italia;;;;;;;;
-LOM;Lombardia;Lombardie;Lombardei;;Lombardía;;;;;;;;
+LOM;Milan;Milan;Milan;;Milan;;;;;;;;
 PAR;Parma;Parme;Parma;;Parma;;;;;;;;
 MOD;Modena;Modène;Modena;;Módena;;;;;;;;
 SAR;Sardinia-Piedmont;Piémont-Sardaigne;Sardinien-Piemont;;Piamonte-Cerdeña;;;;;;;;
@@ -900,7 +900,7 @@ WEI_ADJ;Saxon;Saxon;Sächsisch;;Sajona;;;;;;;;
 SAX_ADJ;Saxon;Saxon;Sächsisch;;Sajona;;;;;;;;
 BOH_ADJ;Baumer;Bohémien;Böhmisch;;Bohemia;;;;;;;;
 VEN_ADJ;Venetian;Vénitien;Venezianisch;;Veneciana;;;;;;;;
-LOM_ADJ;Lombardian;Lombard;Lombardisch;;Lombarda;;;;;;;;
+LOM_ADJ;Milanese;Milanese;Milanese;;Milanese;;;;;;;;
 HEK_ADJ;Hessian;Hessien;Hessisch;;Hessiana;;;;;;;;
 MEC_ADJ;Mecklenburgian;Mecklembourgeois;Mecklenburgisch;;Mecklenburguesa;;;;;;;;
 NGF_ADJ;North German;Allemand du nord;Norddeutsch;;Alemana del norte;;;;;;;;
@@ -1223,7 +1223,7 @@ yugoslav;Yugoslav;;;;;;;;;;;;
 mediano;Mediano;;;;;;;;;;;;
 neapolitan;Neapolitan;;;;;;;;;;;;
 sardinian;Sardinian;;;;;;;;;;;;
-tuscan;Tuscan;;;;;;;;;;;;
+lombard;Lombard;;;;;;;;;;;;
 venetian;Venetian;;;;;;;;;;;;
 highlander;Highlander;;;;;;;;;;;;
 celtic;Celtic;;;;;;;;;;;;
@@ -8877,12 +8877,9 @@ PROV342;Kuopio;Kuopio;Kuopio;;Kuopio;;;;;;;;
 PROV343;Helsinki;Helsinki;Helsinki;;Helsinki;;;;;;;;
 PROV344;Hämeenlinna;Hämeenlinna;Hameenlinna;;Hameenlinna;;;;;;;;
 PROV347;Tampere;Tampere;Tampere;;Tampere;;;;;;;;
-PROV369;Kiel;Kiel;Kiel;;Kiel;;;;;;;;
-PROV370;Flensburg;Flensburg;Flensburg;;Flensburg;;;;;;;;
 PROV373;Odense;Odense;Odense;;Odense;;;;;;;;
 PROV374;Bornholm;Bornholm;Bornholm;;Bornholm;;;;;;;;
 PROV397;Luxembourg;Luxembourg;Luxemburg;;Luxemburgo;;;;;;;;
-PROV399;Lille;Lille;Lille;;Lille;;;;;;;;
 PROV401;Arras;Arras;Arras;;Arras;;;;;;;;
 PROV402;Amiens;Amiens;Amiens;;Amiens;;;;;;;;
 PROV404;Cambrai;Cambrai;Cambrai;;Cambrai;;;;;;;;
@@ -8906,16 +8903,13 @@ PROV436;Le Mans;Le Mans;Le Mans;;Le Mans;;;;;;;;
 PROV438;Orléans;Orléans;Orleans;;Orleans;;;;;;;;
 PROV439;Bourges;Bourges;Bourges;;Bourges;;;;;;;;
 PROV440;Blois;Blois;Blois;;Blois;;;;;;;;
-PROV528;Hamburg;Hambourg;Hamburg;;Hamburgo;;;;;;;;
 PROV529;Lauenburg;Lauenburg;Lauenburg;;Lauenburg;;;;;;;;
 PROV530;Lübeck;Lübeck;Lübeck;;Lübeck;;;;;;;;
-PROV531;Stade;Stade;Stade;;Stade;;;;;;;;
 PROV532;Lüneburg;Lunebourg;Lüneburg;;Luneburg;;;;;;;;
 PROV535;Nienburg;Nienburg;Nienburg;;Nienburg;;;;;;;;
 PROV537;Göttingen;Göttingen;Göttingen;;Gottingen;;;;;;;;
 PROV538;Osnabrück;Osnabrück;Osnabrück;;Osnabruck;;;;;;;;
 PROV539;Bremen;Brême;Bremen;;Bremen;;;;;;;;
-PROV540;Oldenburg;Oldenbourg;Oldenburg;;Oldenburgo;;;;;;;;
 PROV541;Cloppenburg;Cloppenburg;Cloppenburg;;Cloppenburg;;;;;;;;
 PROV542;Lingen;Lingen;Lingen;;Lingen;;;;;;;;
 PROV544;Schwerin;Schwerin;Schwerin;;Schwerin;;;;;;;;
@@ -8971,7 +8965,6 @@ PROV601;Ingolstadt;Ingolstadt;Ingolstadt;;Ingolstadt;;;;;;;;
 PROV602;Regensburg;Ratisbonne;Regensburg;;Ratisbona;;;;;;;;
 PROV604;Basel;Bâle;Basel;;Basilea;;;;;;;;
 PROV610;Ponape;Ponape;Ponape;;Ponape;;;;;;;;
-PROV612;Innsbruck;Innsbruck;Innsbruck;;Innsbruck;;;;;;;;
 PROV613;Salzburg;Salzbourg;Salzburg;;Salzburgo;;;;;;;;
 PROV615;Lienz;Lienz;Lienz;;Lienz;;;;;;;;
 PROV617;Szerethely;Szerethely;Szerethely;;Szerethely;;;;;;;;
