HRE setup part 1.5

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1107,7 +1107,7 @@ PROV403;St-Quentin;;;;;;;;;;;;;
 PROV408;Reims;;;;;;;;;;;;;
 PROV415;Lé Hâvre;;;;;;;;;;;;;
 PROV416;Évreux;;;;;;;;;;;;
-PROV417;Alençoun;;;;;;;;;;;;
+PROV417;Bellême;;;;;;;;;;;;
 PROV418;Kaem;;;;;;;;;;;;
 PROV431;Chalon;;;;;;;;;;;;;
 PROV435;Laval;;;;;;;;;;;;;
@@ -1554,3 +1554,14 @@ PROV3764;Le Vérdun;;;;;;;;;;;;;
 PROV3765;Usès;;;;;;;;;;;;;
 PROV3766;Munségur;;;;;;;;;;;;;
 PROV3767;Velai;;;;;;;;;;;;;
+PROV3768;Perche;;;;;;;;;;;;;
+PROV3769;Harcourt;;;;;;;;;;;;;
+PROV3770;Elbeuf;;;;;;;;;;;;;
+PROV3771;Rouen;;;;;;;;;;;;;
+PROV3772;Longueville;;;;;;;;;;;;;
+PROV3773;Vendôme;;;;;;;;;;;;;
+PROV3774;Châteauroux;;;;;;;;;;;;;
+PROV3775;Sancerre;;;;;;;;;;;;;
+PROV3776;Mâcon;;;;;;;;;;;;;
+PROV3777;Semur;;;;;;;;;;;;;
+PROV3778;Nevers;;;;;;;;;;;;;
