--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -391,11 +391,11 @@ KOL;Cölln;;;;;;;;;;;;;
 KOL_ADJ;Cöllner;;;;;;;;;;;;;
 MAG;Meideborg;;;;;;;;;;;;;
 MAG_ADJ;Meideborger;;;;;;;;;;;;;
-LOR;Lothringë;;;;;;;;;;;;;
+LOR;Lothringe;;;;;;;;;;;;;
 LOR_ADJ;Lothringer;;;;;;;;;;;;;
 BRG;Burgundië;;;;;;;;;;;;;
 BRG_ADJ;Burgunder;;;;;;;;;;;;;
-WUR;Alamannië;;;;;;;;;;;;
+WUR;Alemannia;;;;;;;;;;;;
 WUR_ADJ;Alaman;;;;;;;;;;;;
 AAC;Aahë;;;;;;;;;;;;;
 AAC_ADJ;Aah;;;;;;;;;;;;;
